训练模块增加功能：使用一个独立的csv数据文件，对某个已有的模型进行测试与输出

--- a/train/train.config
+++ b/train/train.config
@@ -1,11 +1,10 @@
 [task]
-task_target = train
-train_set = data/origin/train_7_3_2.csv
+task_target = test
+train_set = data/origin/train_7_4_2.csv
 ratio = 0.7
 
-retrain_prefix = 201712222212
-model_id = N002
-test_set = data/OfflineRisk_201804093002.csv
+test_set = data/origin/train_7_4_2.csv
+test_model = models/18070401_N0001.model
 
 [boost_parameter]
 max_depth = 4
