--- a/train/train_models.config
+++ b/train/train_models.config
@@ -1,23 +1,21 @@
 [boost_parameter]
-max_depth = 8
+max_depth = 5
 eta = 0.025
 nthread = 15
-subsample = 0.8
+subsample = 0.5
 colsample_bytree = 0.8
 colsample_bylevel = 0.8
 
 [train_parameter]
 num_boost_round= 1000
-early_stopping_rounds=500
+early_stopping_rounds=50
 
 [action_parameter]
-time_stamp = 180703022
-model_id = N0003
+time_stamp = 201807042107
+model_id = N0001
 
-data_file_name = data/180623_test
-data_context_file_name = data/180623_test_context
-
-model_name = 201805071014_N0001_offline.model
+test_data_id =  201807042107
+test_model = models/18070401_N0001.model
 
 [statistics_file]
 train_statistics = testRes/180629_input.csv
