--- a/train/redis.config
+++ b/train/redis.config
@@ -1,12 +1,15 @@
 [redis]
-default_ip = 10.109.246.100
-default_port = 6379
-default_db = 0
-default_pwd = hlai123!@#
-fixed_ip = 10.109.246.100
-fixed_port = 6379
-fixed_db = 0
-fixed_pwd = hlai123!@#
+redis_ip = 10.109.246.100
+redis_port = 6379
+redis_db = 0
+redis_pwd = hlai123!@#
 
 [MQ]
 semaphore_size = 4
+rpc_ip = 127.0.0.1
+rpc_port = 9090
+
+[multiProcess]
+pool_num = 1
+process_num = 4
+data_per_process = 11
