http后台修改开发为多进程处理

--- a/flask/redis.config
+++ b/flask/redis.config
@@ -1,9 +1,10 @@
 [redis]
-default_ip = 10.109.246.100
-default_port = 6379
-default_db = 0
-default_pwd = hlai123!@#
-fixed_ip = 10.109.246.100
-fixed_port = 6379
-fixed_db = 0
-fixed_pwd = hlai123!@#
+redis_ip = 10.109.246.100
+redis_port = 6379
+redis_db = 0
+redis_pwd = hlai123!@#
+
+[multiProcess]
+pool_num = 8
+process_num = 1
+data_per_process = 6
