将接口程序依照接口文档改造，并追加logger记录和实体类

--- a/flask/redis.config
+++ b/flask/redis.config
@@ -5,5 +5,7 @@ redis_db = 1
 redis_pwd = hlai123!@#
 
 [multiProcess]
-process_num = 8
-data_per_process = 6
+total_process_num = 9
+coreItem_process_num = 6
+restItem_process_num = 3
+data_per_process = 1
