--- a/train/redis.config
+++ b/train/redis.config
@@ -10,6 +10,7 @@ rpc_ip = 127.0.0.1
 rpc_port = 9090
 
 [multiProcess]
-pool_num = 8
-process_num = 2
-data_per_process = 6
+total_process_num = 9
+coreItem_process_num = 6
+restItem_process_num = 3
+data_per_process = 5
