微调训练脚本的代码，准备测试新数据的训练

--- a/train/train_models.config
+++ b/train/train_models.config
@@ -11,12 +11,12 @@ num_boost_round= 1000
 early_stopping_rounds=50
 
 [action_parameter]
-time_stamp = 201807042107
+train_data_id = train_before2015
 model_id = N0001
 
-test_data_id =  201807042107
+test_data_id =  test_after201804
 test_model = models/18070401_N0001.model
 
 [statistics_file]
-train_statistics = testRes/180629_input.csv
-test_statistics = testRes/180629_input.csv
+train_statistics = testRes/190511_input.csv
+test_statistics = testRes/190511_input.csv
