正确率太低，换一下数据和参数

--- a/train/train_models.config
+++ b/train/train_models.config
@@ -1,6 +1,6 @@
 [boost_parameter]
-max_depth = 5
-eta = 0.025
+max_depth = 2
+eta = 0.09
 nthread = 15
 subsample = 0.5
 colsample_bytree = 0.8
@@ -11,7 +11,7 @@ num_boost_round= 1000
 early_stopping_rounds=50
 
 [action_parameter]
-train_data_id = train_before2015
+train_data_id = train_after2015
 model_id = N0001
 
 test_data_id =  test_after201804
